[package]
name = "zh_volt"
version = "0.1.1"
edition = "2024"
description = "Maneger AINOPOL OLT"
repository = "https://sirherobrine23.com.br/Sirherobrine23/zh-volt.git"
authors = ["Matheus Sampaio Queiroga <me@sirherobrine23.com.br>"]

[dependencies]
argh = "0.1.19"
byteorder = "1.5.0"
hex = "0.4.3"
macaddr = { version = "1.0.1", features = ["serde"] }
pnet = "0.35.0"
rust-embed = "8.11.0"
scanf = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tiny_http = "0.12.0"
